2002-02-20  Joe Shaw  <joe@ximian.com>

	* configure.in, src/libsoup/soup-private.h: Version 0.5.10

	* src/libsoup/soup-ssl-tunnel.c (soup_ssl_tunnel_read): Add code
	for handling proxy authentication when tunnelling SSL traffic.

2002-02-12  Joe Shaw  <joe@ximian.com>

	* src/libsoup/soup-queue.c (soup_queue_connect_cb): Check to make
	sure we have a proxy context before farming the request off to the
	SSL-over-HTTP tunnel.

2002-02-11  Joe Shaw  <joe@ximian.com>

	* src/libsoup/soup-openssl.c (soup_openssl_write): Backport a fix
	from the 0.6 branch from Dan Winship.

2002-02-07  Joe Shaw  <joe@ximian.com>

	* configure.in, src/libsoup/soup-private.h: Version 0.5.9

	* src/libsoup/Makefile.am: Add soup-ssl-tunnel.[ch].

	* src/libsoup/soup-headers.c (soup_headers_parse_request): Don't
	barf if we pass in a NULL header GHashTable.

	* src/libsoup/soup-queue.c (soup_queue_connect_cb): Get the proxy
	protocol and the actual protocol separately, and if the proxy is
	HTTP or	HTTPS and the real protocol is HTTPS, call our SSL
	proxying stuff.

	* src/libsoup/soup-uri.c (soup_uri_get_default_port): Make this a 
	public function.

	* src/libsoup/soup-ssl-tunnel.c: Implementation of RFC 2817,
	tunnelling SSL requests through an HTTP proxy.  Laaaaaame.  The
	code sucks, but	I have no plan to make it nicer since this is 
	already in the 0.6 branch.

2002-02-01  Joe Shaw  <joe@ximian.com>

	* configure.in, src/libsoup/soup-private.h: Version 0.5.8

	* src/libsoup/soup-uri.c (soup_uri_to_proxyable_string): Added,
	doesn't output any user, authentication or password to the URL.

	* src/libsoup/soup-queue.c (soup_get_request_header): In the
	event of a proxy, call soup_uri_to_proxyable_string() instead of
	soup_uri_to_string().

2002-01-19  Alex Graveley  <alex@ximian.com>

	* configure.in: Bump version to 0.5.7.
	* src/libsoup/soup-private.h: Ditto.

2002-01-19  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-socks.c (soup_socks_write): Don't unref the